--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,8 +1,12 @@
-.addTodoForm {
+.Search {
   display: flex;
   justify-content: center;
   align-items: center;
   margin-bottom: 20px;
+
+  input {
+    width: 206px;
+  }
 
   button {
     margin-left: 10px;
