--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -13,10 +13,17 @@
 }
 
 .modal {
+  position: relative;
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
   padding: 20px;
   background-color: rgb(180, 192, 199);
 
   border-radius: 8px;
+
+  .closeButton {
+    position: absolute;
+    top: 0%;
+    right: 0%;
+  }
 }
