--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,9 +1,23 @@
 .Search {
+  position: relative;
   display: flex;
   justify-content: center;
   align-items: center;
 
+  @media screen and (max-width: 600px) {
+    position: static;
+  }
+
   input {
     width: 206px;
+  }
+
+  button {
+    position: absolute;
+    right: -20%;
+
+    @media screen and (max-width: 600px) {
+      position: static;
+    }
   }
 }
