--- a/src/components/ModalFormCreateUpdateTodo/ModalFormCreateUpdateTodo.module.scss
+++ b/src/components/ModalFormCreateUpdateTodo/ModalFormCreateUpdateTodo.module.scss
@@ -2,9 +2,17 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 20px;
+  margin: 40px 20px;
 
   button {
     margin-left: 10px;
+  }
+
+  .inputWrapper {
+    position: relative;
+
+    .helperText {
+      position: absolute;
+    }
   }
 }
