began adaptation for mobile

--- a/src/components/Modal/Modal.module.scss
+++ b/src/components/Modal/Modal.module.scss
@@ -18,6 +18,11 @@
   max-width: calc(100vw - 48px);
   max-height: calc(100vh - 24px);
   padding: 20px;
+
+  @media screen and (max-width: 600px) {
+    padding: 5px;
+  }
+
   background-color: rgb(255, 255, 255);
 
   border-radius: 4px;
