--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -4,12 +4,12 @@
   justify-content: center;
   align-items: center;
 
-  @media screen and (max-width: 600px) {
-    position: static;
-  }
-
   input {
     width: 206px;
+  }
+
+  @media screen and (max-width: 600px) {
+    position: static;
   }
 
   button {
@@ -20,4 +20,8 @@
       position: static;
     }
   }
+}
+
+.searchForm {
+  padding: 40px 20px;
 }
