--- a/src/components/AddTodoBtn/AddTodoBtn.module.scss
+++ b/src/components/AddTodoBtn/AddTodoBtn.module.scss
@@ -2,4 +2,8 @@
   display: flex;
   justify-content: center;
   margin-bottom: 20px;
+
+  @media screen and (max-width: 600px) {
+    margin-bottom: 0;
+  }
 }
