--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -8,4 +8,8 @@
   @media screen and (max-width: 400px) {
     padding: 20px 10px;
   }
+
+  @media screen and (max-width: 600px) {
+    position: relative;
+  }
 }
