--- a/src/components/SortButtonsPanel/SortButtonsPanel.module.scss
+++ b/src/components/SortButtonsPanel/SortButtonsPanel.module.scss
@@ -4,6 +4,10 @@
 
   .selectWrapper {
     width: 234px;
+
+    @media screen and (max-width: 600px) {
+      width: 150px;
+    }
   }
 
   // .checked {
