--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -12,3 +12,28 @@
     padding: 10px 20px;
   }
 }
+
+.NavLink {
+  padding: 10px;
+  width: 130px;
+  text-align: center;
+
+  &:not(:last-child) {
+    margin-right: 10px;
+  }
+
+  background-color: rgb(179, 176, 194);
+  color: black;
+
+  border-radius: 4px;
+  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  &:hover {
+    box-shadow: 7px 7px 13px 0px rgba(0, 0, 0, 0.38);
+  }
+}
+
+.NavLinkActive {
+  background-color: #3f51b5;
+  color: white;
+}
