--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -17,6 +17,7 @@
   padding: 10px;
   width: 130px;
   text-align: center;
+  text-transform: uppercase;
 
   &:not(:last-child) {
     margin-right: 10px;
