--- a/src/components/AuthNav/AuthNav.module.scss
+++ b/src/components/AuthNav/AuthNav.module.scss
@@ -8,6 +8,7 @@
   padding: 10px;
   width: 130px;
   text-align: center;
+  text-transform: uppercase;
 
   &:not(:last-child) {
     margin-right: 10px;
