--- a/src/components/ChartBtn/ChartBtn.module.scss
+++ b/src/components/ChartBtn/ChartBtn.module.scss
@@ -1,15 +1,57 @@
 .chart {
   padding: 10px;
+
+  @media screen and (min-width: 480px) {
+    width: 400px;
+  }
+
+  @media screen and (min-width: 601px) {
+    width: 500px;
+  }
+}
+
+.btnsWrapper {
+  position: absolute;
+  z-index: 1;
+  top: 60px;
+  left: 20px;
+
+  @media screen and (max-width: 400px) {
+    left: 10px;
+  }
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 5px;
+  width: 80px;
+  margin: 5px 0;
+
+  background-color: rgba(63, 81, 181, 0.5);
+  border-radius: 4px;
+
+  button {
+    color: #fff;
+    transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    width: 48px;
+    height: 48px;
+
+    &:hover {
+      color: #3f51b5;
+      box-shadow: 7px 7px 13px 0px rgba(0, 0, 0, 0.38);
+    }
+  }
 }
 
 .chartBtn {
   position: absolute;
-  top: 2%;
-  left: 10%;
+  top: 20px;
+  left: 20px;
 
-  @media screen and (max-width: 600px) {
-    top: 2%;
-    left: 2%;
+  width: 80px;
+
+  @media screen and (max-width: 400px) {
+    left: 10px;
   }
 
   background-color: #3f51b5;
