--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -1,40 +1,38 @@
 .AppBar {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-
   padding: 20px;
   height: max-content;
-
   border-bottom: 1px solid rgb(179, 176, 194);
 
   @media screen and (max-width: 600px) {
     padding: 10px 20px;
   }
-}
 
-.NavLink {
-  padding: 10px;
-  width: 130px;
-  text-align: center;
-  text-transform: uppercase;
-
-  &:not(:last-child) {
-    margin-right: 10px;
+  .appBarWrapperAuth {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-end;
+    max-width: 1024px;
+    margin: 0 auto;
   }
 
-  background-color: rgb(179, 176, 194);
-  color: black;
-
-  border-radius: 4px;
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  &:hover {
-    box-shadow: 7px 7px 13px 0px rgba(0, 0, 0, 0.38);
+  .appBarWrapper {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    max-width: 1024px;
+    margin: 0 auto;
   }
-}
 
-.NavLinkActive {
-  background-color: #3f51b5;
-  color: white;
+  .authNavWrapperAuth {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+  }
+
+  .authNavWrapper {
+    display: flex;
+    justify-content: space-evenly;
+    align-items: flex-end;
+    width: 100%;
+  }
 }
