--- a/src/components/ChartBtn/ChartBtn.module.scss
+++ b/src/components/ChartBtn/ChartBtn.module.scss
@@ -1,5 +1,7 @@
 .chart {
   padding: 10px;
+  margin: 20px;
+  background-color: rgba(255, 255, 255, 0.3);
 
   @media screen and (min-width: 480px) {
     width: 400px;
@@ -27,7 +29,7 @@
   width: 80px;
   margin: 5px 0;
 
-  background-color: rgba(63, 81, 181, 0.5);
+  background-color: rgba(63, 81, 181, 0.9);
   border-radius: 4px;
 
   button {
@@ -39,6 +41,10 @@
     &:hover {
       color: #3f51b5;
       box-shadow: 7px 7px 13px 0px rgba(0, 0, 0, 0.38);
+
+      svg {
+        stroke: rgba(240, 231, 231, 0.8);
+      }
     }
   }
 }
