--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -6,7 +6,7 @@
   padding: 20px;
   max-width: 520px;
   border-radius: 8px;
-  background-color: rgb(121, 134, 209);
+  background-color: rgba(121, 134, 209, 0.6);
   box-shadow: 7px 7px 13px 0px rgba(0, 0, 0, 0.38);
 
   .formTitle {
