--- a/src/components/ModalFormCreateUpdateTodo/ModalFormCreateUpdateTodo.module.scss
+++ b/src/components/ModalFormCreateUpdateTodo/ModalFormCreateUpdateTodo.module.scss
@@ -2,10 +2,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 40px 20px;
+  padding: 20px 20px;
+  margin: 20px;
+
+  background-color: rgba(255, 255, 255, 0.3);
 
   @media screen and (max-width: 600px) {
-    margin: 40px 5px;
+    padding: 40px 5px;
+    margin: 0;
 
     button {
       background-color: #3f51b5;
