--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -1,24 +1,32 @@
-.AuthNav {
+.navWrapper {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 
-  // margin: 0 auto;
+  @media screen and (max-width: 600px) {
+    flex-direction: column;
+  }
 }
 
 .NavLink {
   padding: 10px;
-  width: 130px;
+  width: 100px;
   text-align: center;
   text-transform: uppercase;
 
   @media screen and (max-width: 600px) {
     width: 90px;
     font-size: 14px;
+
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
   }
 
-  &:not(:last-child) {
-    margin-right: 10px;
+  @media screen and (min-width: 601px) {
+    &:not(:last-child) {
+      margin-right: 10px;
+    }
   }
 
   background-color: rgb(179, 176, 194);
