--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -2,16 +2,34 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
   max-width: 767px;
-  padding: 0 30px;
+  margin-left: 10px;
+
+  .exitBtn {
+    margin-left: 10px;
+    height: 38px;
+
+    svg {
+      stroke: none;
+    }
+  }
 
   @media screen and (max-width: 600px) {
-    padding: 0 10px;
+    flex-direction: column;
 
     button {
+      margin-left: 10px;
+      margin-top: 5px;
+      width: 85px;
+      height: 36px;
+
+      border-radius: 4px;
       background-color: #3f51b5;
       color: #fff;
+
+      svg {
+        stroke: none;
+      }
 
       &:hover {
         background-color: #303f9f;
