--- a/src/components/AuthNav/AuthNav.module.scss
+++ b/src/components/AuthNav/AuthNav.module.scss
@@ -3,18 +3,22 @@
   justify-content: space-evenly;
   align-items: center;
 
-  // margin: 0 auto;
+  margin: 0 auto;
 }
 
 .NavLink {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+
   padding: 10px;
   width: 130px;
-  text-align: center;
+  height: 36px;
   text-transform: uppercase;
 
   @media screen and (max-width: 600px) {
-    width: 90px;
-    font-size: 14px;
+    width: 110px;
   }
 
   &:not(:last-child) {
