--- a/src/components/ChartBtn/ChartBtn.module.scss
+++ b/src/components/ChartBtn/ChartBtn.module.scss
@@ -26,7 +26,7 @@
   flex-direction: column;
   align-items: center;
   padding: 5px;
-  width: 80px;
+  width: 100px;
   margin: 5px 0;
 
   background-color: rgba(63, 81, 181, 0.9);
@@ -54,7 +54,13 @@
   top: 20px;
   left: 20px;
 
-  width: 80px;
+  width: 100px;
+  height: 36px;
+  font-size: 14px;
+
+  @media screen and (max-width: 600px) {
+    font-size: 12px;
+  }
 
   @media screen and (max-width: 400px) {
     left: 10px;
