--- a/src/components/AddTodoBtn/AddTodoBtn.module.scss
+++ b/src/components/AddTodoBtn/AddTodoBtn.module.scss
@@ -15,7 +15,8 @@
 
     @media screen and (max-width: 400px) {
       width: 90px;
-      font-size: 8px;
+      font-size: 10px;
+      text-transform: capitalize;
     }
   }
 
