--- a/src/components/ChartBtn/ChartBtn.module.scss
+++ b/src/components/ChartBtn/ChartBtn.module.scss
@@ -63,7 +63,10 @@
   }
 
   @media screen and (max-width: 400px) {
+    width: 80px;
     left: 10px;
+    font-size: 10px;
+    text-transform: capitalize;
   }
 
   background-color: #3f51b5;
