--- a/src/components/SortButtonsPanel/SortButtonsPanel.module.scss
+++ b/src/components/SortButtonsPanel/SortButtonsPanel.module.scss
@@ -8,5 +8,9 @@
     @media screen and (max-width: 600px) {
       width: 150px;
     }
+
+    @media screen and (max-width: 400px) {
+      width: 130px;
+    }
   }
 }
