--- a/src/components/TodoItem/TodoItem.module.scss
+++ b/src/components/TodoItem/TodoItem.module.scss
@@ -6,6 +6,14 @@
     flex-basis: 50%;
 
     overflow: hidden;
+
+    span {
+      font-size: 14px;
+
+      @media screen and (max-width: 400px) {
+        font-size: 12px;
+      }
+    }
   }
 
   .first {
