--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -8,6 +8,13 @@
 
   span {
     padding: 0 10px;
+    text-transform: uppercase;
+    font-size: 14px;
+
+    @media screen and (max-width: 400px) {
+      text-transform: capitalize;
+      font-size: 12px;
+    }
   }
 
   .middle {
