--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -1,9 +1,12 @@
+@import 'scss/vars';
+@import 'scss/breakpoints';
+
 .AppBar {
   padding: 20px;
   height: max-content;
-  border-bottom: 1px solid rgb(179, 176, 194);
+  border-bottom: 1px solid $border-color;
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: $mobile-max) {
     padding: 10px 20px;
   }
 
@@ -12,7 +15,7 @@
     justify-content: flex-end;
     align-items: flex-start;
 
-    max-width: 1024px;
+    max-width: $main-max-width;
     margin: 0 auto;
     margin-bottom: 5px;
 
@@ -26,7 +29,7 @@
     justify-content: space-between;
     align-items: flex-end;
 
-    max-width: 1024px;
+    max-width: $main-max-width;
     margin: 0 auto;
   }
 }
