--- a/src/components/AuthNav/AuthNav.module.scss
+++ b/src/components/AuthNav/AuthNav.module.scss
@@ -1,3 +1,6 @@
+@import 'scss/vars';
+@import 'scss/breakpoints';
+
 .AuthNav {
   display: flex;
   justify-content: space-evenly;
@@ -17,7 +20,7 @@
   height: 36px;
   text-transform: uppercase;
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: $mobile-max) {
     width: 110px;
   }
 
@@ -25,18 +28,18 @@
     margin-right: 10px;
   }
 
-  background-color: rgb(179, 176, 194);
-  color: black;
+  background-color: $nav-link-bg-color;
+  color: $dark-text;
 
   border-radius: 4px;
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: $main-transition;
 
   &:hover {
-    box-shadow: 7px 7px 13px 0px rgba(0, 0, 0, 0.38);
+    box-shadow: $main-shadow;
   }
 }
 
 .NavLinkActive {
-  background-color: #3f51b5;
-  color: white;
+  background-color: $accent;
+  color: $white-text;
 }
