--- a/src/components/Container/Container.module.scss
+++ b/src/components/Container/Container.module.scss
@@ -1,12 +1,15 @@
+@import 'scss/vars';
+@import 'scss/breakpoints';
+
 .Container {
   position: relative;
   margin: 0 auto;
 
   padding: 20px;
   height: max-content;
-  max-width: 1024px;
+  max-width: $main-max-width;
 
-  @media screen and (max-width: 400px) {
+  @media screen and (max-width: $mobile) {
     padding: 20px 10px;
   }
 }
