--- a/src/components/DatePicker/DatePicker.module.scss
+++ b/src/components/DatePicker/DatePicker.module.scss
@@ -1,3 +1,5 @@
+@import 'scss/breakpoints';
+
 .DatePicker {
   position: relative;
   display: flex;
@@ -24,7 +26,7 @@
     }
   }
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: $mobile-max) {
     position: static;
     margin-bottom: 20px;
   }
@@ -33,7 +35,7 @@
     position: absolute;
     left: -22%;
 
-    @media screen and (max-width: 600px) {
+    @media screen and (max-width: $mobile-max) {
       position: static;
     }
   }
