--- a/src/components/LanguageSwitcher/LanguageSwitcher.module.scss
+++ b/src/components/LanguageSwitcher/LanguageSwitcher.module.scss
@@ -1,3 +1,5 @@
+@import 'scss/vars';
+
 .switcher {
   display: flex;
   justify-content: center;
@@ -7,19 +9,19 @@
   }
 
   .darkBtnFlags {
-    color: #fff;
+    color: $white-text;
   }
 
   .lightBtnFlags {
-    color: black;
+    color: $dark-text;
   }
 
   .menu_flags {
-    color: black;
+    color: $dark-text;
 
     ul {
       background-color: rgb(121, 134, 209);
-      box-shadow: 7px 7px 13px 0px rgba(0, 0, 0, 0.38);
+      box-shadow: $main-shadow;
 
       div,
       input {
@@ -29,10 +31,10 @@
       }
 
       input::-webkit-input-placeholder {
-        color: #ccc;
+        color: $text-dark-theme;
       }
       input::-moz-placeholder {
-        color: #ccc;
+        color: $text-dark-theme;
       }
     }
   }
