--- a/src/components/LoginForm/LoginForm.module.scss
+++ b/src/components/LoginForm/LoginForm.module.scss
@@ -1,3 +1,5 @@
+@import 'scss/vars';
+
 .LoginForm {
   display: flex;
   flex-direction: column;
@@ -6,8 +8,8 @@
   padding: 20px;
   max-width: 520px;
   border-radius: 8px;
-  background-color: rgba(121, 134, 209, 0.6);
-  box-shadow: 7px 7px 13px 0px rgba(0, 0, 0, 0.38);
+  background-color: $auth-form-bg-color;
+  box-shadow: $main-shadow;
 
   .formTitle {
     margin: 0 auto 30px;
