--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -1,9 +1,12 @@
+@import 'scss/vars';
+@import 'scss/breakpoints';
+
 .navWrapper {
   display: flex;
   justify-content: center;
   align-items: center;
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: $mobile-max) {
     flex-direction: column;
   }
 }
@@ -14,7 +17,7 @@
   text-align: center;
   text-transform: uppercase;
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: $mobile-max) {
     width: 110px;
 
     &:not(:last-child) {
@@ -22,24 +25,24 @@
     }
   }
 
-  @media screen and (min-width: 601px) {
+  @media screen and (min-width: $tablet-min) {
     &:not(:last-child) {
       margin-right: 10px;
     }
   }
 
-  background-color: rgb(179, 176, 194);
-  color: black;
+  background-color: $nav-link-bg-color;
+  color: $dark-text;
 
   border-radius: 4px;
-  transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: $main-transition;
 
   &:hover {
-    box-shadow: 7px 7px 13px 0px rgba(0, 0, 0, 0.38);
+    box-shadow: $main-shadow;
   }
 }
 
 .NavLinkActive {
-  background-color: #3f51b5;
-  color: white;
+  background-color: $accent;
+  color: $white-text;
 }
