--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,3 +1,5 @@
+@import 'scss/breakpoints';
+
 .Search {
   position: relative;
   display: flex;
@@ -13,7 +15,7 @@
     right: -22%;
   }
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: $mobile-max) {
     position: static;
 
     .btnClearSearch {
@@ -27,7 +29,7 @@
     }
   }
 }
-@media screen and (max-width: 600px) {
+@media screen and (max-width: $mobile-max) {
   .searchForm {
     padding: 40px 10px;
 
