--- a/src/components/SliderItem/SliderItem.module.scss
+++ b/src/components/SliderItem/SliderItem.module.scss
@@ -1,3 +1,5 @@
+@import 'scss/vars';
+
 .sliderItem {
   position: relative;
   margin: 10px;
@@ -25,9 +27,9 @@
     padding: 10px;
     text-align: left;
     border-radius: 12px;
-    border: 1px solid #b3b0c2;
+    border: 1px solid $text-dark-theme;
 
-    color: #b3b0c2;
+    color: $text-dark-theme;
     background-color: rgba(0, 0, 0, 0.7);
 
     .text {
