--- a/src/components/SliderList/SliderList.module.scss
+++ b/src/components/SliderList/SliderList.module.scss
@@ -1,3 +1,5 @@
+@import 'scss/vars';
+
 .sliderListWrapper {
   padding: 20px;
   text-align: center;
@@ -9,5 +11,5 @@
 }
 
 .arrow:before {
-  color: black;
+  color: $dark-text;
 }
