--- a/src/components/SortButtonsPanel/SortButtonsPanel.module.scss
+++ b/src/components/SortButtonsPanel/SortButtonsPanel.module.scss
@@ -1,3 +1,5 @@
+@import 'scss/breakpoints';
+
 .buttonsWrapper {
   display: flex;
   justify-content: space-evenly;
@@ -5,11 +7,11 @@
   .selectWrapper {
     width: 234px;
 
-    @media screen and (max-width: 600px) {
+    @media screen and (max-width: $mobile-max) {
       width: 150px;
     }
 
-    @media screen and (max-width: 400px) {
+    @media screen and (max-width: $mobile) {
       width: 130px;
     }
   }
