--- a/src/components/TodoItem/TodoItem.module.scss
+++ b/src/components/TodoItem/TodoItem.module.scss
@@ -1,3 +1,6 @@
+@import 'scss/vars';
+@import 'scss/breakpoints';
+
 .todoItem {
   display: flex;
 
@@ -8,10 +11,10 @@
     overflow: hidden;
 
     span {
-      font-size: 14px;
+      font-size: $main-font-size-desc;
 
-      @media screen and (max-width: 400px) {
-        font-size: 12px;
+      @media screen and (max-width: $mobile) {
+        font-size: $main-font-size-mobile;
       }
     }
   }
