--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -1,3 +1,6 @@
+@import 'scss/vars';
+@import 'scss/breakpoints';
+
 .listContainer {
   margin: 0 auto;
   max-width: 767px;
@@ -9,35 +12,35 @@
   span {
     padding: 0 10px;
     text-transform: uppercase;
-    font-size: 14px;
+    font-size: $main-font-size-desc;
 
-    @media screen and (max-width: 400px) {
+    @media screen and (max-width: $mobile) {
       text-transform: capitalize;
-      font-size: 12px;
+      font-size: $main-font-size-mobile;
     }
   }
 
   .middle {
     text-align: center;
     flex-basis: 50%;
-    border: 1px solid rgb(212, 212, 212);
+    border: 1px solid $border-color;
   }
 
   .first {
     text-align: start;
     flex-basis: 25%;
-    border-top: 1px solid rgb(212, 212, 212);
-    border-bottom: 1px solid rgb(212, 212, 212);
-    border-left: 1px solid rgb(212, 212, 212);
+    border-top: 1px solid $border-color;
+    border-bottom: 1px solid $border-color;
+    border-left: 1px solid $border-color;
     border-radius: 4px 0 0 4px;
   }
 
   .last {
     text-align: end;
     flex-basis: 25%;
-    border-top: 1px solid rgb(212, 212, 212);
-    border-bottom: 1px solid rgb(212, 212, 212);
-    border-right: 1px solid rgb(212, 212, 212);
+    border-top: 1px solid $border-color;
+    border-bottom: 1px solid $border-color;
+    border-right: 1px solid $border-color;
     border-radius: 0 4px 4px 0;
   }
 }
