--- a/src/components/UserMenu/UserMenu.module.scss
+++ b/src/components/UserMenu/UserMenu.module.scss
@@ -1,3 +1,6 @@
+@import 'scss/vars';
+@import 'scss/breakpoints';
+
 .userMenu {
   display: flex;
   justify-content: space-between;
@@ -13,7 +16,7 @@
     }
   }
 
-  @media screen and (max-width: 600px) {
+  @media screen and (max-width: $mobile-max) {
     flex-direction: column;
 
     button {
@@ -23,15 +26,15 @@
       height: 36px;
 
       border-radius: 4px;
-      background-color: #3f51b5;
-      color: #fff;
+      background-color: $accent;
+      color: $white-text;
 
       svg {
         stroke: none;
       }
 
       &:hover {
-        background-color: #303f9f;
+        background-color: $accent-hover;
       }
     }
   }
