update styles, change charts, add routes for filters

--- a/src/components/TodoList/TodoList.module.scss
+++ b/src/components/TodoList/TodoList.module.scss
@@ -4,6 +4,11 @@
 .listContainer {
   margin: 0 auto;
   max-width: 767px;
+  min-height: 340px;
+
+  @media screen and (max-width: $mobile-max) {
+    min-height: 315px;
+  }
 }
 
 .listNames {
