--- a/src/components/AppBar/AppBar.module.scss
+++ b/src/components/AppBar/AppBar.module.scss
@@ -2,12 +2,12 @@
 @import 'scss/breakpoints';
 
 .AppBar {
-  padding: 20px;
+  padding: 20px 0;
   height: max-content;
   border-bottom: 1px solid $border-color;
 
   @media screen and (max-width: $mobile-max) {
-    padding: 10px 20px;
+    padding: 10px 0;
   }
 
   .switcherWrapper {
@@ -18,6 +18,7 @@
     max-width: $main-max-width;
     margin: 0 auto;
     margin-bottom: 5px;
+    padding: 0 20px;
 
     button {
       height: 36px;
@@ -31,5 +32,6 @@
 
     max-width: $main-max-width;
     margin: 0 auto;
+    padding: 0 20px;
   }
 }
