--- a/src/components/DatePicker/DatePicker.module.scss
+++ b/src/components/DatePicker/DatePicker.module.scss
@@ -40,3 +40,15 @@
     }
   }
 }
+
+.datePickerNoActive {
+  input {
+    color: rgb(67, 72, 85);
+  }
+
+  button:disabled {
+    svg {
+      fill: rgb(67, 72, 85);
+    }
+  }
+}
