--- a/src/components/AlertError/AlertError.module.scss
+++ b/src/components/AlertError/AlertError.module.scss
@@ -1,3 +1,12 @@
+.alertWrapper {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+}
+
 .alert {
   position: absolute;
   top: 50%;
