update request get todos by query/date/status/page in one request

--- a/src/components/Confirmation/Confirmation.module.scss
+++ b/src/components/Confirmation/Confirmation.module.scss
@@ -1,3 +1,12 @@
+@import 'scss/vars';
+
 .confirmation {
+  background-image: radial-gradient(
+    circle farthest-corner at center,
+    rgba(255, 255, 255, 0.7) 0%,
+    rgba(136, 143, 165, 0.7) 100%
+  );
+
+  color: $dark-text;
   padding: 20px;
 }
