--- a/src/components/ModalFormCreateUpdateTodo/ModalFormCreateUpdateTodo.module.scss
+++ b/src/components/ModalFormCreateUpdateTodo/ModalFormCreateUpdateTodo.module.scss
@@ -5,10 +5,14 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 20px 20px;
+  // padding: 20px 20px;
   margin: 20px;
 
-  background-color: rgba(255, 255, 255, 0.3);
+  & > label {
+    width: 150px;
+  }
+
+  // background-color: rgba(255, 255, 255, 0.3);
 
   @media screen and (max-width: $mobile-max) {
     padding: 40px 5px;
