--- a/src/components/Search/Search.module.scss
+++ b/src/components/Search/Search.module.scss
@@ -1,4 +1,5 @@
 @import 'scss/breakpoints';
+@import 'scss/vars';
 
 .Search {
   position: relative;
@@ -10,35 +11,28 @@
     width: 206px;
   }
 
-  .btnClearSearchDesc {
+  .btnClearSearch {
     position: absolute;
     right: -22%;
+
+    &:disabled {
+      svg {
+        fill: rgb(67, 72, 85);
+      }
+    }
   }
 
   @media screen and (max-width: $mobile-max) {
-    position: static;
+    input {
+      width: 176px;
+    }
+    label {
+      font-size: $main-font-size-mobile;
+    }
 
     .btnClearSearch {
-      position: static;
-    }
-
-    .btnOpenSearch {
       position: absolute;
-      top: 2%;
-      right: 2%;
-    }
-  }
-}
-@media screen and (max-width: $mobile-max) {
-  .searchForm {
-    padding: 40px 10px;
-
-    input {
-      width: 156px;
-    }
-
-    .btnSearch {
-      margin-left: 10px;
+      right: -24%;
     }
   }
 }
