--- a/src/components/AuthNav/AuthNav.module.scss
+++ b/src/components/AuthNav/AuthNav.module.scss
@@ -3,7 +3,8 @@
 
 .AuthNav {
   display: flex;
-  justify-content: space-evenly;
+  // justify-content: space-evenly;
+  justify-content: center;
   align-items: center;
 
   margin: 0 auto;
