--- a/src/components/AdminPanel/AdminPanel.module.scss
+++ b/src/components/AdminPanel/AdminPanel.module.scss
@@ -12,22 +12,24 @@
 }
 
 .NavLink {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-
   padding: 10px;
   width: 130px;
   height: 36px;
+  text-align: center;
   text-transform: uppercase;
 
   @media screen and (max-width: $mobile-max) {
     width: 110px;
+
+    &:not(:last-child) {
+      margin-bottom: 10px;
+    }
   }
 
-  &:not(:last-child) {
-    margin-right: 10px;
+  @media screen and (min-width: $tablet-min) {
+    &:not(:last-child) {
+      margin-right: 10px;
+    }
   }
 
   background-color: $nav-link-bg-color;
