update profile page, completed user

--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -12,6 +12,13 @@ body {
   @media screen and (max-width: $mobile) {
     font-size: 10px;
   }
+
+  input:-webkit-autofill,
+  input:-webkit-autofill:hover,
+  input:-webkit-autofill:focus,
+  input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+  }
 }
 
 .lightTheme {
