--- a/src/components/FileUploaderForm/FileUploaderForm.module.scss
+++ b/src/components/FileUploaderForm/FileUploaderForm.module.scss
@@ -1,8 +1,14 @@
+@import 'scss/vars';
+
 .modalDataWrapper {
   display: flex;
   flex-direction: column;
 
   padding: 20px;
+
+  canvas {
+    margin-bottom: 10px;
+  }
 
   button {
     margin-top: 10px;
@@ -10,12 +16,67 @@
 }
 
 .imageWrapper {
-  margin-top: 10px;
+  margin-bottom: 10px;
   width: 250px;
   height: 250px;
+  border: 1px solid transparent;
+  border-radius: 4px;
+  box-shadow: $main-shadow;
 
   img {
     width: 100%;
     border-radius: 4px;
+    object-fit: cover;
+  }
+}
+
+.emailWrapper {
+  cursor: default;
+
+  .emailText {
+    width: 250px;
+    padding: 20px 10px 0;
+  }
+}
+
+.nameWrapper {
+  display: flex;
+
+  align-items: center;
+  width: 250px;
+  padding: 20px 0;
+
+  span {
+    cursor: default;
+  }
+
+  .updateName {
+    display: block;
+    padding: 10px;
+    height: 48px;
+
+    margin-left: 10px;
+    background-color: inherit;
+  }
+
+  .name {
+    padding: 0 10px;
+  }
+
+  button {
+    margin-left: 10px;
+    margin-left: auto;
+
+    svg {
+      cursor: pointer;
+    }
+  }
+}
+
+.exitBtn {
+  margin-top: 20px;
+
+  svg {
+    stroke: none;
   }
 }
