--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -2,8 +2,8 @@ $text-dark-theme: rgb(240, 231, 231);
 $dark-text: #0f0f0f;
 $white-text: #fff;
 $border-color: #b5b5b8;
-$accent: #3f51b5;
-$accent-hover: #303f9f;
+$accent: rgb(25, 118, 210);
+$accent-hover: #1565c0;
 $main-shadow: 7px 7px 13px 0px rgba(0, 0, 0, 0.38);
 $light-shadow: 7px 7px 13px 0px rgba(240, 231, 231, 0.1);
 $main-max-width: 1200px;
@@ -11,4 +11,4 @@ $main-font-size-desc: 14px;
 $main-font-size-mobile: 12px;
 $main-transition: all 250ms cubic-bezier(0.4, 0, 0.2, 1);
 $nav-link-bg-color: rgb(179, 176, 194);
-$auth-form-bg-color: rgba(121, 134, 209, 0.6);
+$auth-form-bg-color: rgba(118, 162, 206, 0.6);
