--- a/src/components/ModalFormCreateUpdateTodo/ModalFormCreateUpdateTodo.module.scss
+++ b/src/components/ModalFormCreateUpdateTodo/ModalFormCreateUpdateTodo.module.scss
@@ -22,6 +22,10 @@
       background-color: $accent;
       color: $white-text;
 
+      border-radius: 4px;
+      width: 40px;
+      height: 40px;
+
       &:hover {
         background-color: $accent-hover;
       }
