--- a/src/scss/_base.scss
+++ b/src/scss/_base.scss
@@ -24,13 +24,6 @@ body {
 .lightTheme {
   min-height: 100vh;
   background-color: rgb(255, 255, 255);
-
-  // background-image: radial-gradient(
-  //   circle farthest-corner at center,
-  //   rgba(255, 255, 255, 0.7) 0%,
-  //   rgba(136, 143, 165, 0.7) 100%
-  // );
-
   color: $dark-text;
 
   input,
@@ -40,6 +33,17 @@ body {
 
     @media screen and (max-width: $mobile-max) {
       font-size: $main-font-size-mobile;
+    }
+  }
+
+  button {
+    box-shadow: none;
+    transition: $main-transition;
+    &:hover {
+      box-shadow: $main-shadow;
+      svg {
+        transition: $main-transition;
+      }
     }
   }
 }
@@ -77,7 +81,9 @@ body {
   }
 
   button {
+    transition: $main-transition;
     &:hover {
+      box-shadow: $main-shadow;
       svg {
         fill: $accent;
         stroke: rgba(240, 231, 231, 0.8);
